# apifrom

./: .env.template  .gitignore  .readthedocs.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY_ADVISORY.md  docker-compose.yml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
apifrom/: __init__.py  config.py  health.py  logging_utils.py  main.py  monitoring.py
docker/: .env.production
docs/: .readthedocs.yml  advanced_caching.md  api_reference.md  conf.py  contents.rst  contributing.md  contributing_to_docs.md  core_concepts.md  deployment.md  deployment_guide.md  environment_and_monitoring.md  examples.md  getting_started.md  github_deployment.md  index.md  middleware.md  migration_guide.md  monitoring.md  performance.md  plugins.md  production_checklist.md  production_readiness.md  requirements.txt  security.md  serverless.md  testing.md  troubleshooting.md
examples/: advanced_caching_api.py  advanced_plugin_api.py  async_api.py  batch_processing_api.py  cached_api.py  combined_example.py  cors_api.py  csp_api.py  csrf_protected_api.py  database_api.py  error_handling_api.py  file_upload_api.py  hsts_preload_api.py  monitoring_api.py  netlify_functions_api.py  openapi_docs.py  pagination_api.py  performance_optimization_api.py  permissions_policy_api.py  plugin_api.py  rate_limited_api.py  secure_api.py  secure_headers_api.py  security_api.py  serverless_api.py  simple_api.py  sri_api.py  standalone_api.py  swagger_custom_api.py  trusted_types_api.py  vercel_serverless_api.py  verify_performance_modules.py  web_decorator_example.py  web_decorator_example_updated.py  web_optimization_example.py  web_optimize_decorator_example.py  web_optimized_api.py
scripts/: README.md  jose_to_pyjwt_migration.py  pydantic_migration.py
src/: api.py
tests/: README.md  __init__.py  async_test_server_helper.py  conftest.py  middleware_test_helper.py  security_test_helper.py  test_adapters.py  test_adapters_async.py  test_advanced_caching.py  test_advanced_caching_async.py  test_api.py  test_api_async.py  test_cache_middleware_async.py  test_core.py  test_cors_middleware.py  test_cors_middleware_async.py  (+25 more)
(+107 files in other folders)
